--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2016,3 +2016,40 @@ span.border.two:after {
 		-5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
+#toolbox {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background-color: white;
+	padding: 5px;
+	border-radius: 5px;
+	transition: background-color 0.3s ease-in-out;
+	overflow: hidden;
+}
+
+#toolbox::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(255, 255, 255);
+	opacity: 0.6;
+	transition: opacity 0.3s ease-in-out;
+	pointer-events: none;
+}
+
+#toolbox:hover::before {
+	opacity: 0;
+}
+
+.icon-button {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background-size: cover;
+	margin-right: 5px;
+	cursor: pointer;
+	border: none;
+}
