--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,10 @@
     flex: 7;
     background-color: #FFFFFF;
     padding: 1%;
+    z-index: 3;
+	box-shadow:
+		5px 5px 5px rgba(0, 0, 0, 0.5),
+		-5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .right-column {
     flex: 3;
@@ -74,4 +78,67 @@ ul.address-text p {
         background-color: #ccc;
         border-radius: 50%;
     }
+}
+
+.container-fluid {
+	display: flex;
+	flex-direction: column;
+}
+  
+.banner-info {
+	flex-grow: 1;
+	display: flex;
+	height: 100%;
+}
+
+.navigation {
+	box-shadow:
+		5px 5px 5px rgba(0, 0, 0, 0.5),
+		-5px 5px 5px rgba(0, 0, 0, 0.5);
+} 
+
+#navigation {
+	z-index: 3;
+}
+
+#toolbar {
+	z-index: 2;
+}
+
+#toolbox {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background-color: white;
+	padding: 5px;
+	border-radius: 5px;
+	transition: background-color 0.3s ease-in-out;
+	overflow: hidden;
+}
+
+#toolbox::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(255, 255, 255);
+	opacity: 0.6;
+	transition: opacity 0.3s ease-in-out;
+	pointer-events: none;
+}
+
+#toolbox:hover::before {
+	opacity: 0;
+}
+
+.icon-button {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background-size: cover;
+	margin-right: 5px;
+	cursor: pointer;
+	border: none;
 }
