--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
     align-items: stretch; /* 默认值，使列高度相等 */
     background-color: #cedfe6;
     margin: 0px;
-    padding-bottom: 4%;
+    padding-bottom: 1%;
 }
 .left-column {
     flex: 2;
@@ -85,7 +85,7 @@ ul.address-text p {
 	flex-direction: column;
 }
   
-.banner-info {
+.main-panel {
 	flex-grow: 1;
 	display: flex;
 	height: 100%;
@@ -105,15 +105,26 @@ ul.address-text p {
 	z-index: 2;
 }
 
+#tag-tooltip {
+	position: absolute;
+	text-anchor: middle;
+	font-size: 20px;
+	font-weight: bold;
+	fill: #054863;
+	opacity: 0;
+	margin-left: 15%;
+}
+
 #toolbox {
 	position: absolute;
-	top: 10px;
-	right: 10px;
-	background-color: white;
+	/* top: 10px;
+	right: 10px; */
+	/* background-color: white; */
 	padding: 5px;
 	border-radius: 5px;
 	transition: background-color 0.3s ease-in-out;
 	overflow: hidden;
+	margin-left: 40%;
 }
 
 #toolbox::before {
@@ -142,3 +153,57 @@ ul.address-text p {
 	cursor: pointer;
 	border: none;
 }
+
+
+/* 滚动槽 */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.06);
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+}
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.12);
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+}
+/*自定义滑动控件的轨道*/
+/* input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
+	background: #7fddff; 
+	border-radius: 3.3px;
+	border: 0.2px solid rgba(1, 1, 1, 0);
+} */
+input[type=range]{
+	width: 556px;
+	height: 8px;
+	border-radius: 4px;
+	outline: none;
+	-webkit-appearance: none;/*清除系统默认样式*/
+	background-color: #7fddff;
+}
+/*自定义滑动控件的滑块*/
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height:20px;/*拖动块高度*/
+	width: 20px;/*拖动块宽度*/
+	border-radius: 50px;
+	cursor: pointer;
+	/* margin-top: -3.5px; */
+	box-shadow:0 0 5px rgba(0,0,0,0.8);
+	background: url("/src/image/logo-G.png") no-repeat;
+	background-size: contain;
+}
+
+
+/*自定义滑动条获得焦点时的背景颜色*/
+/* input[type=range]:focus::-webkit-slider-runnable-track {
+	background: #bada55;
+} */
