--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@
     flex: 7;
     background-color: #FFFFFF;
     padding: 1%;
-    z-index: 3;
+    /* z-index: 1; */
 	box-shadow:
 		5px 5px 5px rgba(0, 0, 0, 0.5),
 		-5px 5px 5px rgba(0, 0, 0, 0.5);
