--- a/templates/index.html
+++ b/templates/index.html
@@ -33,14 +33,14 @@
 
 <body>
     <div class="container-fluid">
-        <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center; z-index: 3;">
+        <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
                 <a href="http://82.156.152.182:9001/"><img src="/src/image/logo-index.jpg" width="288" height="64"></a>
             </div>
             <div class="clearfix"></div>
         </div>
         <!-- <div class="tool-panel" style="background-color: #f7f7f7; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"></div> -->
-        <div class="navigation" style="background-color: #f7f7f7; border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; z-index: 2;">
+        <div class="navigation" style="background-color: #f7f7f7; border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; z-index: 0;">
             <form id="update-info">
                 {% csrf_token %}
                 <ul class="address" style="padding-top: 0px;">
@@ -85,8 +85,8 @@
                                 </script>
                             </li>
                             <li style="width: 10%; float: left; color: #777; margin-left: 1.5%;">
-                                <input style="display: inline-block; width: 60%;" id="range-edge" type="range" name="extendsProb" value="0.3" min="0" max="1" step="0.1">
-                                <span id="edge-value" style="display: inline-block; color: #333;">>=0.3</span>
+                                <input style="display: inline-block; width: 60%;" id="range-edge" type="range" name="extendsProb" value="0.5" min="0" max="1" step="0.1">
+                                <span id="edge-value" style="display: inline-block; color: #333;">>=0.5</span>
                                 <script type='text/javascript'>
                                     $("#range-edge").change(function () {
                                         var value = $("#range-edge").val();
@@ -160,32 +160,20 @@
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 50%"><b>author rank</b></li>
-                            <li style="color: #333" id="authorRank">{{ authorRank }}</li>
+                            <li style="width: 50%; padding-left: 1%;"><b>author (rank)</b></li>
+                            <li style="color: #333;" id="authorRank">{{ name }} ({{ authorRank}})</li>
                         </ul>
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 50%"><b>name</b></li>
-                            <li style="color: #333;" id="name">{{ name }}</li>
+                            <li style="width: 60%;"><b>h-index/citations</b></li>
+                            <li style="color: #333;">{{ hIndex }} / {{ citationCount }}</li>
                         </ul>
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 50%"><b>paper count</b></li>
-                            <li style="color: #333">{{ paperCount }}</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 50%"><b>citation count</b></li>
-                            <li style="color: #333">{{ citationCount }}</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 50%"><b>h-index</b></li>
-                            <li style="color: #333">{{ hIndex }}</li>
+                            <li style="width: 60%;"><b>paper count</b></li>
+                            <li style="color: #333;">{{ paperCount }}</li>
                         </ul>
                     </li>
                 </ul>
@@ -200,13 +188,13 @@
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 45%"><b>nodes</b></li>
+                            <li style="width: 55%;"><b>nodes</b></li>
                             <li id="node-num" style="color: #333;"></li>
                         </ul>
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 45%"><b>edges</b></li>
+                            <li style="width: 55%;"><b>edges</b></li>
                             <li id="edge-num" style="color: #333;"></li>
                         </ul>
                     </li>
@@ -435,7 +423,7 @@
             field_leaves = fields[1];
             
             current_topic_div = 1;
-            const filename = '/src/json/' + String(authorRank) + '_0_0.5_0.3_10_1.json';
+            const filename = '/src/json/' + String(authorRank) + '_0_0.5_0.5_10_1.json';
             d3.json(filename).then( data => {
                 years = data[1];      //年份节点
                 nodes = data[2];      //论文节点
@@ -483,8 +471,9 @@
                 const temp = formData[i].split('=');
                 paramData[temp[0]] = temp[1]
             }
-            paramData.authorRank = $("#authorRank").text();
-            paramData.name = $("#name").text();
+            var rank = $("#authorRank").text();
+            const regex = /\((\d+)\)/;  // 正则表达式匹配括号内的数字
+            paramData.authorRank = regex.exec(rank)[1];
             $.ajax({
                 headers: {"X-CSRFToken": getCookie("csrftoken")},
                 type: "POST",
